--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,59 @@
-.App {
-  text-align: center;
+.bookContainer{
+    height:85vh;
+    width:90%;
+    margin:auto;
+   
+    display:flex;
+    justify-content:space-between;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.bookContainer aside{
+    width:45%;
+    background:#f8eadd;
+    border-radius:20px;
+    boxShadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    padding:20px 30px;
+
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.bookContainer aside p{
+    line-height:21px;
+}
+.appBar{
+    display: flex;
+    width: 90%;
+    margin: auto;
+    justify-content: space-between;
+    align-items:center;
+    min-height:5vh;
+    margin-top:10px;
+    margin-bottom:10px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.center{
+    text-align:center;
+    font-size:36px;
+    font-weight:300;
+    margin-bottom:4px;
 }
 
-.App-link {
-  color: #61dafb;
+.small{
+    font-size:16px;
+    text-align:center;
+display:block;
+margin-bottom:40px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.saveButton{
+    padding: 10px 30px;
+    background: transparent;
+    border-radius: 30px;
+    border: 1px solid #000;
+    margin-right: 20px;
+    cursor:pointer; 
+}
+
+.saveButton:hover{
+    background:#000;
+    color:#fff;
 }
